ido-tth/main/default/objects/tth_Trip__c/tth_Trip__c.object-meta.xml
<CustomObject>
    <description>Top level object that represents all booking channels as well as travel modes for an end to end customer trip</description>
    <label>Trip</label>
    <nameField>
        <displayFormat>TRIP {0}</displayFormat>
        <label>Trip ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>