ido-tth/main/default/objects/tth_Trip__c/fields/tth_Accommodation_Required__c.field-meta.xml
<CustomField>
    <fullName>tth_Accommodation_Required__c</fullName>
    <label>Accommodation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>