ido-tth/main/default/objects/tth_Trip__c/fields/tth_Activities__c.field-meta.xml
<CustomField>
    <fullName>tth_Activities__c</fullName>
    <description>Used for trip selection and suggestions</description>
    <label>Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Activities</valueSetName>
    </valueSet>
</CustomField>