ido-tth/main/default/objects/tth_Trip__c/fields/tth_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>tth_Number_of_Days__c</fullName>
    <description>How many days long is this trip.
Field behaviour changes based on whether this is using relative dates or absolute dates (as defined in Custom Metadata settings)</description>
    <label>Number of Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>