ido-tth/main/default/objects/tth_Trip__c/fields/tth_Primary_Traveler__c.field-meta.xml
<CustomField>
    <fullName>tth_Primary_Traveler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main traveler who is organising the trip</description>
    <label>Primary Traveler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>