ido-tth/main/default/objects/tth_Trip__c/fields/tth_Transport_Mode__c.field-meta.xml
<CustomField>
    <fullName>tth_Transport_Mode__c</fullName>
    <description>What modes of transport will be used on this trip?</description>
    <label>Transport Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Travel_Mode</valueSetName>
    </valueSet>
</CustomField>