ido-tth/main/default/objects/tth_Trip__c/fields/tth_Trip_Destination__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Destination__c</fullName>
    <description>What is the destination city for this trip?</description>
    <label>Destination City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>