ido-tth/main/default/objects/tth_Trip__c/fields/tth_Trip_End__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_End__c</fullName>
    <defaultValue>today()+7</defaultValue>
    <description>What date does the trip end</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>