ido-tth/main/default/objects/tth_Trip__c/fields/tth_Trip_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_End_Date__c</fullName>
    <description>If using relative dates, end date is today minus Days Ago plus Trip Length, or else it is the absolute end Date</description>
    <formula>IF( $CustomMetadata.tth_Booking_ReservationSettings__mdt.default.Use_Relative_Dates__c , (TODAY() -  tth_Days_Ago__c) +  tth_Number_of_Days__c  ,  tth_Trip_End__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip End</label>
    <type>Date</type>
</CustomField>