ido-tth/main/default/objects/tth_Trip__c/fields/tth_Trip_Name__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Name__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;+ Id ,
 IF( ISBLANK(tth_Trip_Origin__c) ,

   tth_Primary_Traveler__r.LastName + &#39; : &#39; +  TEXT(tth_Vibe__c) + &#39; - &#39; +  TEXT(tth_Activities__c) + &#39; - &#39; + TEXT(tth_Geography__c) + &#39; - &#39; + TEXT( tth_Weather__c ) + &#39; - &#39; + TEXT( tth_Budget__c )   ,

   tth_Primary_Traveler__r.LastName + &#39; : &#39; +  tth_Trip_Origin__c + &#39; - &#39; +  tth_Trip_Destination__c  + &#39; - &#39; + TEXT(
   tth_Trip_Start__c ))

)</formula>
    <label>Trip Name</label>
    <type>Text</type>
</CustomField>