ido-tth/main/default/objects/tth_Trip__c/fields/tth_Trip_Origin__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Origin__c</fullName>
    <description>What city does the trip start in?</description>
    <label>Origin City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>