ido-tth/main/default/objects/tth_Trip__c/fields/tth_Trip_Start__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Start__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>What date does the trip start on</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>