ido-tth/main/default/objects/tth_Trip__c/fields/tth_Trip_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Start_Date__c</fullName>
    <description>If using relative dates, Start date it today minus Days Ago or else it is just the absolute start Date</description>
    <formula>IF( $CustomMetadata.tth_Booking_ReservationSettings__mdt.default.Use_Relative_Dates__c ,  TODAY() - tth_Days_Ago__c  ,  tth_Trip_Start__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Start</label>
    <type>Date</type>
</CustomField>