ido-tth/main/default/objects/tth_Trip__c/fields/tth_Trip_Status__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Status__c</fullName>
    <description>What is the current status of this trip?</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Status</valueSetName>
    </valueSet>
</CustomField>