ido-tth/main/default/objects/tth_Trip__c/fields/tth_Type_Icon__c.field-meta.xml
<CustomField>
    <fullName>tth_Type_Icon__c</fullName>
    <description>Icon representation of the Nature of Trip custom field</description>
    <formula>IF(NOT(ISBLANK(TEXT( tth_Nature_of_Trip__c ))),  IMAGE(&#39;/resource/tth_trip_type_icons/&#39; +TEXT(tth_Nature_of_Trip__c)+ &#39;.png&#39;, TEXT( tth_Nature_of_Trip__c ) , 50,50) , &#39;&#39;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>