ido-tth/main/default/objects/tth_Trip__c/fields/tth_Weather__c.field-meta.xml
<CustomField>
    <fullName>tth_Weather__c</fullName>
    <description>Used for trip selection and suggestions</description>
    <label>Weather</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Trip_Weather</valueSetName>
    </valueSet>
</CustomField>